# velkar-wallet

./: .gitignore  CONTRIBUTING.md  Cargo.toml  FORK_NOTES.md  README-GITHUB.md  README-PACKAGE.md  README.md  build-docker-multi-arch.sh  check  check.ps1  test
cli/: Cargo.toml
cli/src/: cli.rs  error.rs  imports.rs  lib.rs  main.rs  matchers.rs  utils.rs
cli/src/extensions/: transaction.rs
cli/src/modules/: account.rs  address.rs  broadcast.rs  connect.rs  create-unsigned-tx.rs  details.rs  disconnect.rs  estimate.rs  export.rs  guide.txt  help.rs  history.rs  import.rs  list.rs  message.rs  metrics.rs  miner.rs  mod.rs  monitor.rs  mute.rs  network.rs  node.rs  ping.rs  pskb.rs  reload.rs  rpc.rs  select.rs  send.rs  server.rs  settings.rs  sign.rs  sweep.rs  test.rs  theme.rs  track.rs  transfer.rs  wallet.rs
cli/src/wizards/: account.rs  import.rs  wallet.rs
components/connectionmanager/: Cargo.toml
components/connectionmanager/src/: lib.rs
components/consensusmanager/: Cargo.toml
components/consensusmanager/src/: batch.rs  lib.rs  session.rs
consensus/: Cargo.toml
consensus/benches/: check_scripts.rs  parallel_muhash.rs
consensus/client/: Cargo.toml
consensus/client/src/: error.rs  hash.rs  header.rs  imports.rs  input.rs  lib.rs  optional_header.rs  outpoint.rs  output.rs  parents.rs  sign.rs  signing.rs  transaction.rs  utils.rs  utxo.rs
consensus/client/src/serializable/: mod.rs  numeric.rs  string.rs
consensus/core/: Cargo.toml
consensus/core/benches/: serde_benchmark.rs
consensus/core/src/: acceptance_data.rs  block.rs  blockhash.rs  blockstatus.rs  constants.rs  header.rs  lib.rs  merkle.rs  muhash.rs  network.rs  pruning.rs  subnets.rs  trusted.rs  tx.rs
consensus/core/src/api/: mod.rs
consensus/core/src/config/: bps.rs  constants.rs  genesis.rs  mod.rs  params.rs
consensus/core/src/errors/: block.rs  consensus.rs  pruning.rs  sync.rs  tx.rs
consensus/core/src/hashing/: header.rs  mod.rs  sighash.rs  tx.rs  wasm.rs
consensus/core/src/mass/: mod.rs
consensus/core/src/tx/: script_public_key.rs
consensus/core/src/utxo/: utxo_diff.rs  utxo_inquirer.rs
consensus/notify/: Cargo.toml
consensus/notify/src/: collector.rs  connection.rs  notification.rs  notifier.rs  root.rs  service.rs
consensus/pow/: Cargo.toml
consensus/pow/benches/: bench.rs
consensus/pow/src/: lib.rs  matrix.rs  wasm.rs  xoshiro.rs
consensus/src/: config.rs  errors.rs  params.rs  test_helpers.rs
consensus/src/consensus/: cache_policy_builder.rs  ctl.rs  factory.rs  mod.rs  services.rs  storage.rs  test_consensus.rs  utxo_set_override.rs
consensus/src/constants/: mod.rs
consensus/src/model/services/: reachability.rs  relations.rs  statuses.rs
consensus/src/model/stores/: acceptance_data.rs  block_transactions.rs  children.rs  (+20 more)
consensus/src/pipeline/: deps_manager.rs  mod.rs  monitor.rs
consensus/src/processes/: Parallel Processing.md  block_depth.rs  coinbase.rs  difficulty.rs  parents_builder.rs  past_median_time.rs  pruning.rs  relations.rs  traversal_manager.rs  window.rs
consensus/wasm/: Cargo.toml
consensus/wasm/src/: error.rs  utils.rs
crypto/merkle/: Cargo.toml
crypto/merkle/src/: lib.rs
crypto/txscript/: Cargo.toml
crypto/txscript/errors/: Cargo.toml
crypto/txscript/examples/: kip-10.rs
crypto/txscript/src/: data_stack.rs  error.rs  lib.rs  runtime_sig_op_counter.rs  script_builder.rs  script_class.rs  standard.rs
daemon/: Cargo.toml
daemon/src/: error.rs  imports.rs  lib.rs
daemon/src/cpu_miner/: mod.rs
daemon/src/velkard/: mod.rs
indexes/processor/: Cargo.toml
indexes/processor/src/: errors.rs  processor.rs  service.rs
indexes/utxoindex/: Cargo.toml
indexes/utxoindex/src/: index.rs  update_container.rs
mining/: Cargo.toml
mining/benches/: bench.rs
mining/errors/: Cargo.toml
mining/errors/src/: block_template.rs  mempool.rs
mining/src/: cache.rs  errors.rs  manager.rs  manager_tests.rs  monitor.rs
mining/src/block_template/: builder.rs  errors.rs  selector.rs
mining/src/feerate/: mod.rs
mining/src/mempool/: check_transaction_standard.rs  config.rs  errors.rs  handle_new_block_transactions.rs  mod.rs  populate_entries_and_try_validate.rs  remove_transaction.rs  replace_by_fee.rs  validate_and_insert_transaction.rs
mining/src/model/: candidate_tx.rs  mod.rs  owner_txs.rs  topological_sort.rs  tx_insert.rs
mining/src/testutils/: coinbase_mock.rs  consensus_mock.rs
notify/: Cargo.toml
notify/benches/: bench.rs
notify/src/: broadcaster.rs  collector.rs  lib.rs  listener.rs  notification.rs  notifier.rs  root.rs  scope.rs  subscriber.rs
notify/src/address/: mod.rs  tracker.rs
notify/src/subscription/: compounded.rs  context.rs  single.rs
protocol/flows/: Cargo.toml
protocol/flows/src/: flow_context.rs  flow_trait.rs  service.rs
protocol/mining/: Cargo.toml
protocol/mining/src/: rule_engine.rs
protocol/p2p/: Cargo.toml
protocol/p2p/proto/: messages.proto  p2p.proto
protocol/p2p/src/: common.rs  echo.rs  handshake.rs  lib.rs
rothschild/: Cargo.toml
rothschild/benches/: bench.rs
rothschild/src/: main.rs
rpc/core/: Cargo.toml
rpc/core/src/: error.rs  lib.rs
rpc/grpc/client/: Cargo.toml
rpc/grpc/core/: Cargo.toml
rpc/grpc/server/: Cargo.toml
rpc/service/: Cargo.toml
rpc/service/src/: collector.rs  service.rs
simpa/: Cargo.toml
simpa/src/: blocks_json.rs  main.rs
simpa/src/simulator/: miner.rs  network.rs
testing/integration/: Cargo.toml
testing/integration/src/: consensus_integration_tests.rs  consensus_pipeline_tests.rs  daemon_integration_tests.rs  mempool_benchmarks.rs  rpc_perf_benchmarks.rs  rpc_tests.rs  subscribe_benchmarks.rs
velkard/: Cargo.toml  README.md
velkard/src/: args.rs  daemon.rs  main.rs
wallet/daemon/: Cargo.toml  build.rs
wallet/daemon/proto/: velkarwalletd.proto
wallet/daemon/src/: main.rs
wallet/native/: Cargo.toml
wallet/native/src/: main.rs
wallet/pskt/: Cargo.toml
wallet/pskt/examples/: multisig.rs
wallet/pskt/src/: bundle.rs  convert.rs  error.rs  global.rs  input.rs  lib.rs  output.rs  pskt.rs
(+513 files in other folders)
