[package]
name = "velkar-cli"
description = "Velkar CLI"
keywords = ["velkar", "wallet", "cli", "rpc"]
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
include = [
    "src/**/*.rs",
    "src/**/*.txt",
    "src/**/*.css",
    "Cargo.toml",
    "Cargo.lock",
]
autobins = false

[[bin]]
name = "velkar-cli"
path = "src/main.rs"

[features]
default = []

[lib]
name = "velkar_cli_lib"
crate-type = ["cdylib", "lib"]

[dependencies]
async-trait.workspace = true
borsh.workspace = true
cfg-if.workspace = true
convert_case.workspace = true
dashmap.workspace = true
downcast.workspace = true
faster-hex.workspace = true
futures.workspace = true
js-sys.workspace = true
hex.workspace = true
velkar-addresses.workspace = true
velkar-bip32.workspace = true
velkar-consensus-core.workspace = true
velkar-core.workspace = true
velkar-daemon.workspace = true
velkar-metrics-core.workspace = true
velkar-rpc-core.workspace = true
velkar-utils.workspace = true
velkar-wallet-core.workspace = true
velkar-wallet-keys.workspace = true
velkar-wallet-pskt.workspace = true
velkar-wrpc-client.workspace = true
nw-sys.workspace = true
pad.workspace = true
regex.workspace = true
separator.workspace = true
serde_json.workspace = true
serde.workspace = true
textwrap.workspace = true
thiserror.workspace = true
wasm-bindgen.workspace = true
workflow-core.workspace = true
workflow-dom.workspace = true
workflow-log.workspace = true
workflow-node.workspace = true
workflow-nw.workspace = true
workflow-store.workspace = true
workflow-terminal.workspace = true
workflow-wasm.workspace = true

[dependencies.web-sys]
workspace = true
features = [
    'console',
    'Document',
    'Window',
    'Node',
    'Element',
    'HtmlElement',
    'DomTokenList',
    # 'HtmlElement',
    # 'CustomEvent',
    # 'MouseEvent'
]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio.workspace = true

[lints]
workspace = true
