[package]
name = "velkar-consensus"
description = "Velkar consensus library"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
arc-swap.workspace = true
async-channel.workspace = true
bincode.workspace = true
crossbeam-channel.workspace = true
faster-hex.workspace = true
futures-util.workspace = true
indexmap.workspace = true
itertools.workspace = true
velkar-addresses.workspace = true
velkar-consensus-core.workspace = true
velkar-consensus-notify.workspace = true
velkar-consensusmanager.workspace = true
velkar-core.workspace = true
velkar-database.workspace = true
velkar-hashes.workspace = true
velkar-math.workspace = true
velkar-merkle.workspace = true
velkar-muhash.workspace = true
velkar-notify.workspace = true
velkar-pow.workspace = true
velkar-txscript.workspace = true
velkar-txscript-errors.workspace = true
velkar-utils.workspace = true
log.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
rayon.workspace = true
rocksdb.workspace = true
secp256k1.workspace = true
serde.workspace = true
smallvec.workspace = true
thiserror.workspace = true
tokio.workspace = true

rand = { workspace = true, features = ["small_rng"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }

[dev-dependencies]
criterion.workspace = true
serde_json.workspace = true
flate2.workspace = true
rand_distr.workspace = true
velkar-txscript-errors.workspace = true
velkar-addresses.workspace = true

[[bench]]
name = "parallel_muhash"
harness = false

[[bench]]
name = "check_scripts"
harness = false

[features]
html_reports = []
devnet-prealloc = ["velkar-consensus-core/devnet-prealloc"]

[lints]
workspace = true
