[package]
name = "rothschild"
description = "Velkar Transaction Generator"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
velkar-addresses.workspace = true
velkar-consensus-core.workspace = true
velkar-core.workspace = true
velkar-grpc-client.workspace = true
velkar-notify.workspace = true
velkar-rpc-core.workspace = true
velkar-txscript.workspace = true
velkar-utils.workspace = true

async-channel.workspace = true
clap.workspace = true
faster-hex.workspace = true
itertools.workspace = true
log.workspace = true
parking_lot.workspace = true
rand.workspace = true
rayon.workspace = true
secp256k1 = { workspace = true, features = ["global-context", "rand-std"] }
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread"] }

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "bench"
harness = false

[lints]
workspace = true
