[package]
name = "simpa"
description = "Velkar Network Simulator"
publish = false
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
velkar-alloc.workspace = true            # This changes the global allocator for all of the next dependencies so should be kept first
velkar-consensus-core.workspace = true
velkar-consensus-notify.workspace = true
velkar-consensus.workspace = true
velkar-core.workspace = true
velkar-database.workspace = true
velkar-hashes.workspace = true
velkar-perf-monitor.workspace = true
velkar-utils.workspace = true

async-channel.workspace = true
cfg-if.workspace = true
clap.workspace = true
dhat = { workspace = true, optional = true }
futures-util.workspace = true
futures.workspace = true
flate2.workspace = true
indexmap.workspace = true
itertools.workspace = true
log.workspace = true
num_cpus.workspace = true
rand_distr.workspace = true
rand.workspace = true
rayon.workspace = true
secp256k1.workspace = true
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread"] }
serde_json.workspace = true
serde.workspace = true
faster-hex.workspace = true
velkar-testing-integration.workspace = true


[features]
heap = ["dhat", "velkar-alloc/heap"]
semaphore-trace = ["velkar-utils/semaphore-trace"]

[lints]
workspace = true
