[package]
name = "velkard"
description = "Velkar full node daemon"
keywords = ["velkar", "blockdag"]
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true
autobins = false

[[bin]]
name = "velkard"
path = "src/main.rs"

[lib]
name = "velkard_lib"
crate-type = ["cdylib", "lib"]

[dependencies]
velkar-alloc.workspace = true # This changes the global allocator for all of the next dependencies so should be kept first

velkar-addresses.workspace = true
velkar-addressmanager.workspace = true
velkar-consensus-core.workspace = true
velkar-consensus-notify.workspace = true
velkar-consensus.workspace = true
velkar-consensusmanager.workspace = true
velkar-core.workspace = true
velkar-database.workspace = true
velkar-grpc-server.workspace = true
velkar-hashes.workspace = true
velkar-index-processor.workspace = true
velkar-mining.workspace = true
velkar-notify.workspace = true
velkar-p2p-flows.workspace = true
velkar-p2p-lib.workspace = true
velkar-p2p-mining.workspace = true
velkar-perf-monitor.workspace = true
velkar-rpc-core.workspace = true
velkar-rpc-service.workspace = true
velkar-txscript.workspace = true
velkar-utils.workspace = true
velkar-utils-tower.workspace = true
velkar-utxoindex.workspace = true
velkar-wrpc-server.workspace = true

async-channel.workspace = true
cfg-if.workspace = true
clap = { workspace = true, features = ["env"]}
dhat = { workspace = true, optional = true }
dirs.workspace = true
futures-util.workspace = true
itertools.workspace = true
log.workspace = true
num_cpus.workspace = true
rand.workspace = true
rayon.workspace = true
rocksdb.workspace = true
serde.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread"] }
workflow-log.workspace = true
serde_json.workspace = true

toml = "0.8.10"
serde_with = "3.7.0"

[features]
heap = ["dhat", "velkar-alloc/heap"]
devnet-prealloc = ["velkar-consensus/devnet-prealloc"]
semaphore-trace = ["velkar-utils/semaphore-trace"]

[lints]
workspace = true
