[package]
name = "velkar-consensusmanager"
description = "Velkar consensus library"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
duration-string.workspace = true
futures-util.workspace = true
futures.workspace = true
itertools.workspace = true
velkar-addresses.workspace=true
velkar-consensus-core.workspace = true
velkar-consensus-notify.workspace = true
velkar-core.workspace = true
velkar-utils.workspace = true
log.workspace = true
parking_lot.workspace = true
rand.workspace = true
tokio.workspace = true

[lints]
workspace = true
