[package]
name = "velkar-consensus-notify"
description = "Velkar consensus notifier"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-channel.workspace = true
cfg-if.workspace = true
derive_more.workspace = true
futures.workspace = true
velkar-consensus-core.workspace = true
velkar-core.workspace = true
velkar-hashes.workspace = true
velkar-notify.workspace = true
velkar-utils.workspace = true
log.workspace = true
paste.workspace = true
thiserror.workspace = true
triggered.workspace = true

[lints]
workspace = true
