[package]
name = "velkar-pow"
description = "Velkar proof-of-work"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[features]
wasm32-sdk = []

[dependencies]
argon2.workspace = true
js-sys.workspace = true
velkar-consensus-core.workspace = true
velkar-consensus-client.workspace = true
velkar-hashes.workspace = true
velkar-math.workspace = true
velkar-utils.workspace = true
wasm-bindgen.workspace = true
workflow-wasm.workspace = true
num.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "bench"
harness = false

[lints]
workspace = true
