[package]
name = "velkar-consensus-wasm"
description = "Velkar consensus core WASM bindings"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[features]
wasm32-sdk = []
wasm32-types = []

[dependencies]
velkar-consensus-core.workspace = true
velkar-consensus-client.workspace = true
velkar-addresses.workspace = true
velkar-txscript.workspace = true
velkar-hashes.workspace = true
velkar-utils.workspace = true

cfg-if.workspace = true
faster-hex.workspace = true
js-sys.workspace = true
rand.workspace = true
secp256k1.workspace = true
serde_json.workspace = true
serde-wasm-bindgen.workspace = true
serde.workspace = true
thiserror.workspace = true
wasm-bindgen.workspace = true

workflow-wasm.workspace = true
workflow-log.workspace = true

[lints]
workspace = true
