[package]
name = "velkar-txscript"
description = "Velkar txscript engine library"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[[example]]
name = "kip-10"

[features]
wasm32-core = []
wasm32-sdk = []

[dependencies]
blake2b_simd.workspace = true
borsh.workspace = true
cfg-if.workspace = true
hexplay.workspace = true
indexmap.workspace = true
itertools.workspace = true
velkar-addresses.workspace = true
velkar-consensus-core.workspace = true
velkar-hashes.workspace = true
velkar-txscript-errors.workspace = true
velkar-utils.workspace = true
velkar-wasm-core.workspace = true
log.workspace = true
parking_lot.workspace = true
rand.workspace = true
secp256k1.workspace = true
serde_json.workspace = true
serde-wasm-bindgen.workspace = true
serde.workspace = true
sha2.workspace = true
smallvec.workspace = true
thiserror.workspace = true
wasm-bindgen.workspace = true
workflow-wasm.workspace = true

[dev-dependencies]
criterion.workspace = true
smallvec.workspace = true
serde_json.workspace = true

[[bench]]
name = "bench"
harness = false

[lints]
workspace = true
