[package]
name = "velkar-p2p-mining"
description = "Velkar p2p mining"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
velkar-core.workspace = true
velkar-consensus-core.workspace = true
velkar-consensusmanager.workspace = true
velkar-mining-errors.workspace = true
velkar-hashes.workspace = true
velkar-math.workspace = true
velkar-p2p-lib.workspace = true
velkar-utils.workspace = true
velkar-utils-tower.workspace = true
log.workspace = true
tokio.workspace = true

[lints]
workspace = true
