[package]
name = "velkar-wallet"
description = "Velkar wallet"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true
autobins = false

[[bin]]
name = "velkar-wallet"
path = "src/main.rs"

[features]
default = []

[dependencies]
async-lock.workspace = true
async-trait.workspace = true
velkar-cli.workspace = true
tokio.workspace = true
workflow-log.workspace = true
workflow-terminal.workspace = true

[lints]
workspace = true
